--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #f4f4f4;
+    background-color: #bb2323;
 	color: #555555;
     font:normal 30 px Arial, Helevtica, sans-serif;
 }
