--- a/jack/Documents/GitHub/Google-Project/style.css
+++ b/jack/Documents/GitHub/Google-Project/style.css
@@ -1,11 +1,11 @@
-body{
-    font:normal 30 px Arial, Helevtica, sans-serif;
+h1{
+    font:normal 40 px Arial, Helevtica, sans-serif;
 }
 
-body .google{
+.google{
     font-family: 'Segoe UI', Tahoma, sans-serif;
     font-size: 81.25%;
-    background-color: #ffffff;
+    background-color: #fc0e0e;
 	color: #000000;
 }
 
