--- a/jack/Documents/GitHub/Google-Project/style.css
+++ b/jack/Documents/GitHub/Google-Project/style.css
@@ -1,9 +1,6 @@
-h1{
-    font:normal 40 px Arial, Helevtica, sans-serif;
-}
-
-.google{
+body .google{
     font-family: 'Segoe UI', Tahoma, sans-serif;
+    font-size: 400px;
     font-size: 81.25%;
     background-color: #fc0e0e;
 	color: #000000;
