--- a/jack/Documents/GitHub/Google-Project/style.css
+++ b/jack/Documents/GitHub/Google-Project/style.css
@@ -1,8 +1,9 @@
-body .google{
+body #google{
     font-family: 'Segoe UI', Tahoma, sans-serif;
-    font-size: 400px;
-    font-size: 81.25%;
-    background-color: #fc0e0e;
-	color: #000000;
+    font-size:80px;
+    background-color: #ffffff;
+	color: #cc1d1d;
+    text-align: center;
+    padding-top: 12.5%;
 }
 
