--- a/old/style.css
+++ b/old/style.css
@@ -5,21 +5,22 @@
 
 .google{
     margin: auto;
+    position: relative;
     padding-top: 124px;
     padding-left: 43.25%;
 }
 
 .container2{
     position: relative;
-    margin: 40px 0 0 0;
+    left: 30%;
     width: 745px;
+    max-height: 52px;
     border: 1px solid rgb(0, 0, 0)
 }
 
 .search{
     padding: 17px 50px;
     position: relative;
-    margin: 40px 0 0 0;
     border-radius: 100px;
     width: 745px;
     font-size: 14.5px;
@@ -36,7 +37,7 @@ input:focus::placeholder{
     width: 200px;
     padding: 10px 25px 10px 10px ;
     margin: auto;
-    left: 42%;
+    left: 44%;
 }
 
 .gmail{
@@ -70,28 +71,21 @@ text-decoration: underline;
     }
 
 .mic{
-    margin:auto;
     position: relative;
-    left: 60.5%;
-    top: 28.75%;
+    display: inline;
     scale: 0.85;
 }
 
 .cam{
-    margin:auto;
     position: relative;
-    left: 58.125%;
-    top: 19.85%;
+    display: inline;
     scale: 0.11;
 }
 
 .sign{
     position: relative;
-    display: block;
-    margin: auto;
     left: 48.75%;
-    top: 36.125%;
-    padding: 11px;
+    top: 50.125%;
     border: 1px solid transparent;
     border-radius: 100px;
     background-color: #e4e4e4;
@@ -100,8 +94,6 @@ text-decoration: underline;
 
 .in{
     position: relative;
-    display: block;
-    margin: auto;
     left: 49%;
     top: 43%;
     font-family: Arial, Helvetica, sans-serif;
@@ -120,11 +112,8 @@ text-decoration: underline;
 
 .chrome{
     position: relative;
-    display: block;
-    margin: auto;
     left: 42.75%;
     top: 36.125%;
-    padding: 7.5px;
     border: 1px solid transparent;
     border-radius: 100px;
     background-color: #e4e4e4;
@@ -133,8 +122,6 @@ text-decoration: underline;
 
 .web{
     position: relative;
-    display: block;
-    margin: auto;
     left: 42%;
     top: 43%;
     font-family: Arial, Helvetica, sans-serif;
@@ -153,17 +140,13 @@ text-decoration: underline;
 
 .lookup{
     position: relative;
-    left: 40%;
     scale: 1.25;
 }
 
 .plus{
     position: relative;
-    display: block;
-    margin: auto;
     left: 54.75%;
     top: 36.35%;
-    padding: 7.5px;
     border: 1px solid transparent;
     border-radius: 100px;
     background-color: #b5e1ff;
@@ -173,8 +156,6 @@ text-decoration: underline;
 
 .minus{
     position: relative;
-    display: block;
-    margin: auto;
     left: 53.85%;
     top: 43%;
     font-family: Arial, Helvetica, sans-serif;
